--- a/index.html
+++ b/index.html
@@ -7,6 +7,61 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header id="header_id">
+       <div id="logodiv_id">
+         <img id="logoimg_id" src="images/logo.png" alt="">
+        <p id="logop_id">byway</p>
+    </div>
+    <p>categories</p>
+    <div id="searchdiv_id">
+        <img id="searchimg_id" src="images/search.png" alt="">
+        <p>search courses</p>
+    </div>
+    <p>teach on byway</p>
+     <img id="cartimg_id" src="images/cart.png" alt="">
+    <div id="signin_signup_id">
+          <button id="signin_id">sign in</button>
+          <button id="signup_id">sign up</button>
+
+    </div>
+    </header>
+    <img id="girlimage_id" src="images/girl.jpg" alt="">
+    <h1 id="h1_id">Sign in to your account</h1>
+    <div id="emaildiv_id">
+        <form action="">
+            <label for="">email</label>
+            <input type="text" id="email_input" placeholder="username or email ID">
+        </form>
+    </div>
+    <div id="passworddiv_id">
+        <form action="">
+            <label for="">password</label>
+            <input type="text" id="password_input" placeholder="enter password">
+     <div id="secondsignindiv_id">
+      <button id="signinbutton2_id">sign in</button>
+    <img id="arrowimg_id"src="images/arrow.png" alt="">
+  </div>
+        </form>
+    </div>
+     <div id="divider">
+            <div id="line"></div>
+            <span>Sign in with</span>
+            <div id="line"></div>
+        </div>
+    <footer>
+        <div id="facebook_id">
+            <img src="images/facebook.png" alt="">
+            <p>facebook</p>
+        </div>
+        <div id="google_id">
+            <img src="images/google.png" alt="">
+            <p>instagram</p>
+        </div>
+        <div id="microsoft_id">
+            <img src="images/microsoft.png" alt="">
+            <p>microsoft</p>
+        </div>
+    </footer>
     <script src="main.js"></script>
 </body>
 </html>
