third page confrim

--- a/thirdpage/index.html
+++ b/thirdpage/index.html
@@ -292,7 +292,7 @@
             </div>
         </div>
         <h2>Featured Courses</h2>
-        <div class="courses-grid">
+        <div class="featured-courses-grid">
             <div class="course-card">
                 <div class="course-image">
                     <img src="../images/manwithlaptop.jpg" alt="">
@@ -310,8 +310,7 @@
             </div>
             <div class="course-card">
                 <div class="course-image">
-                  <img src="../images/manwithlaptop.jpg" alt="">
-                </div>
+                 <img src="../images/manwithlaptop.jpg" alt="">                </div>
                 <div class="course-info">
                     <div class="course-title">Beginner's Guide to Design</div>
                     <div class="course-author">Ronald Richards</div>
@@ -325,8 +324,7 @@
             </div>
             <div class="course-card">
                 <div class="course-image">
-                    <img src="../images/manwithlaptop.jpg" alt="">
-                </div>
+                <img src="../images/manwithlaptop.jpg" alt="">                </div>
                 <div class="course-info">
                     <div class="course-title">Beginner's Guide to Design</div>
                     <div class="course-author">Ronald Richards</div>
@@ -340,8 +338,7 @@
             </div>
             <div class="course-card">
                 <div class="course-image">
-                    <img src="../images/manwithlaptop.jpg" alt="">
-                </div>
+                      <img src="../images/manwithlaptop.jpg" alt="">                </div>
                 <div class="course-info">
                     <div class="course-title">Beginner's Guide to Design</div>
                     <div class="course-author">Ronald Richards</div>
@@ -356,6 +353,48 @@
         </div>
         </div>
     </div>
+   
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                 <h3>
+                    <img src="../images/logo.png" alt="Byway Logo">
+                    Byway
+                </h3>
+                <p>Empowering learners through accessible and engaging online education.</p>
+                <p>Byway is a leading online learning platform dedicated to providing high-quality, flexible, and affordable educational experiences.</p>
+            </div>
+            <div class="footer-section">
+                <h3>Get Help</h3>
+                <a href="#">Contact Us</a>
+                <a href="#">Latest Articles</a>
+                <a href="#">FAQ</a>
+            </div>
+            <div class="footer-section">
+                <h3>Programs</h3>
+                <a href="#">Art & Design</a>
+                <a href="#">Business</a>
+                <a href="#">IT & Software</a>
+                <a href="#">Languages</a>
+                <a href="#">Programming</a>
+            </div>
+            <div class="footer-section">
+                <h3>Contact Us</h3>
+                <p>Address: 123 Main Street, Anytown, CA 12345</p>
+                <p>Tel: +123-456-7890</p>
+                <p>Mail: byway@webkul.in</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="social-icons">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg" alt="Google">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/ce/X_logo_2023.svg" alt="X">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Microsoft_logo.svg" alt="Microsoft">
+            </div>
+        </div>
+    </footer>
     <script src="main.js"></script>
 </body>
 </html>
