--- a/thirdpage/index.html
+++ b/thirdpage/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
+    
    <header  id="header_id">
        <div id="logodiv_id">
          <img id="logoimg_id" src="../images/logo.png" alt="">
