--- a/fourthpage/indx.html
+++ b/fourthpage/indx.html
@@ -43,7 +43,7 @@
             <div class="course-item">
                 <img src="../images/figmalogoimg.png" alt="Course" class="course-image">
                 <div class="course-details">
-                    <h3 class="course-title">Introduction to User Experience Design</h3>
+                    <h3 class="course-title">Introduction to business administration</h3>
                     <p class="course-author">By John Doe</p>
                     <div class="course-rating">
                         <span class="stars">★★★★★</span>
@@ -80,7 +80,7 @@
             <div class="course-item">
                 <img src="../images/figmalogoimg.png" alt="Course" class="course-image">
                 <div class="course-details">
-                    <h3 class="course-title">Introduction to User Experience Design</h3>
+                    <h3 class="course-title">Introduction to computer science</h3>
                     <p class="course-author">By John Doe</p>
                     <div class="course-rating">
                         <span class="stars">★★★★★</span>
