--- a/thirdpage/index.html
+++ b/thirdpage/index.html
@@ -22,7 +22,7 @@
     <p>teach on byway</p>
     <div id="logos_id">
         <img src="../images/heart.png" alt="">
-        <img src="../images/cart.png" alt="">
+        <img src="../images/cart.png" alt="cart" class="cart-icon">
         <img src="../images/bell.png" alt="">
         <div id="j_logo_id"> j
 
