--- a/fifthpage/index.html
+++ b/fifthpage/index.html
@@ -76,11 +76,11 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label>Expiry Date</label>
-                                <input type="text" placeholder="Enter Country">
+                                <input type="text" placeholder="enter date">
                             </div>
                             <div class="form-group">
                                 <label>CVC/CVV</label>
-                                <input type="text" placeholder="Enter Country">
+                                <input type="text" placeholder="enter cvc">
                             </div>
                         </div>
                     </div>
